--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
-pandas>=2.0.0
-numpy>=1.24.0
-selenium>=4.0.0
-beautifulsoup4>=4.12.0
-requests>=2.31.0
-transformers>=4.30.0
-torch>=2.0.0
-tokenizers>=0.13.0
-tqdm>=4.65.0
-scikit-learn>=1.3.0
+selenium
+beautifulsoup4
+requests
+transformers
+torch
+tokenizers
+tqdm
+scikit-learn
+pandas
+google_play_scraper
+time
+nltk
+numpy
+matplotlib
+seaborn
+Sastrawi
+wordcloud
